--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="container">
+  <div class="home">
+    <h4>Title</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam animi cum dignissimos dolorum enim fugiat harum in maxime, molestiae nulla porro possimus quae quaerat quam quidem repellendus unde ut veritatis vero.</p>
+  </div>
+</div>
