--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,6 @@
-<p>login works!</p>
+<div class="container">
+  <div class="login">
+    <h1>Title</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet aspernatur facere, inventore iusto magnam nisi odio porro quae reiciendis repellat rerum, sapiente ullam?</p>
+  </div>
+</div>
