add title 2 in login page

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,4 +3,9 @@
     <h1>Title</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet aspernatur facere, inventore iusto magnam nisi odio porro quae reiciendis repellat rerum, sapiente ullam?</p>
   </div>
+
+  <div class="login">
+    <h1>Title 2</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, facilis inventore natus numquam reprehenderit ut.</p>
+  </div>
 </div>
