--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,1 +1,6 @@
-<p>sign-up works!</p>
+<div class="container">
+  <div class="sign-up">
+    <h1>Title</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex fugit hic laudantium nemo provident, repudiandae?</p>
+  </div>
+</div>
