--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,19 @@
-<p>navbar works!</p>
+<nav>
+  <div class="items">
+    <div class="item">
+      <a routerLink="/">
+        Home page
+      </a>
+    </div>
+    <div class="item">
+      <a routerLink="/login">
+        Login page
+      </a>
+    </div>
+    <div class="item">
+      <a routerLink="/sign-up">
+        Sign Up page
+      </a>
+    </div>
+  </div>
+</nav>
