--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,3 +7,7 @@
   <h2>Title 2</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi eum explicabo maiores.</p>
 </div>
+
+<div class="card shadow-6">
+  <h2>Card title</h2>
+</div>
